tests/isa/x86/expression_fixups/negative/signed_dual_fixup_overflow.asm
origin(0x80000000)
x86.use64()

entry:
    cmp qword [rel slot], target
target:
    ret
slot:
    dq(0)
